# duplicate-finder

./: Cargo.toml  LICENSE  README.md
benches/: file_hashing.rs
src/: lib.rs  main.rs  output.rs  scanner.rs
